# chatbot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: chat.py
app/core/: config.py  lifecycle.py  model_context.py  periodic_cleanup.py
app/domain/: chat.py
app/infrastructure/: model_loader.py
app/middleware/: timeout.py
app/schemas/: chat.py
app/services/: chat_service.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: chat.py
backend/app/core/: config.py  lifecycle.py  model_context.py
backend/app/dependencies/: providers.py
backend/app/infrastructure/: model_loader.py
backend/app/middleware/: timeout.py
backend/app/schemas/: health.py
backend/app/services/: chat_service.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.js  HistoryPanel.js
